[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/roboto_mono_regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Title.gd" type="Script" id=2]
[ext_resource path="res://assets/title.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/play_btn.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/play_btn_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/about_btn.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/about_btn_hovered.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[node name="Title" type="Node2D"]
script = ExtResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="HUD"]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="TextureRect" parent="HUD"]
margin_left = 252.0
margin_top = 237.0
margin_right = 909.0
margin_bottom = 381.0
rect_scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="HUD"]
margin_left = 575.0
margin_top = 406.0
margin_right = 745.0
margin_bottom = 491.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtrasButton" type="TextureButton" parent="HUD"]
margin_right = 170.0
margin_bottom = 85.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="HUD"]
margin_left = 1037.0
margin_top = 680.0
margin_right = 1262.0
margin_bottom = 707.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "v1.2.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="HUD"]
margin_left = 8.0
margin_top = 92.0
margin_right = 233.0
margin_bottom = 119.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "High Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HUD/StartButton" to="." method="_on_startPressed"]
[connection signal="pressed" from="HUD/ExtrasButton" to="." method="_on_extrasPressed"]
